# OtusHW4

./: .travis.yml  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  Doxyfile  IPPrinter_8h.html  IPPrinter_8h__dep__incl.map  IPPrinter_8h__dep__incl.md5  IPPrinter_8h__incl.map  IPPrinter_8h__incl.md5  IPPrinter_8h_source.html  README.md  README_8md.html  annotated.html  classes.html  dir_000005_000004.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_169a221bed9a62dfab39a0778e900a2f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fa19baa19c567821586e8dd4bc5b533f.html  dir_fa5672360010c0da74e6313272d3c7de.html  feature__tests_8c.html  feature__tests_8cxx.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  gtests_8cpp.html  gtests_8cpp__incl.map  gtests_8cpp__incl.md5  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+33 more)
include/: IPPrinter.h  toPrintTuple.h
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  searchdata.js
tests/: gtests.cpp
